k8sFile/Jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: kube-jenkins
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: jenkins-k8s.jiedai361.com
    http:
      paths:
      - backend:
          serviceName: jenkins2
          servicePort: 31234
